# djsf

./: .gitignore  CHECKS  Dockerfile  Procfile  README.md  app.json  entrypoint.sh  gunicorn.conf copy.py  gunicorn.conf.py  manage.py  pyproject.toml
.github/workflows/: deploy.yml  django-test.yml
djsf/: admin.py  asgi.py  models.py  settings.py  urls.py  views.py  wsgi.py
djsf/templates/: 404.html  500.html  base.html  base_header.html  home.html
djsf/tests/: settings.py  test_views.py
