[project]
name = "djsf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.7",
    "django-browser-reload>=1.18.0",
    "django-debug-toolbar>=5.0.1",
    "django-tasks>=0.6.1",
    "environs[django]>=14.1.1",
    "gunicorn>=23.0.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-django>=4.10.0",
    "pytest-randomly>=3.16.0",
    "whitenoise[brotli]>=6.9.0",
]


[tool.pytest.ini_options]
pythonpath = ["djsf"]
DJANGO_SETTINGS_MODULE = "djsf.settings"
python_files = ["**test_*.py"]
norecursedirs = [".venv", "templates", ".vscode", ".*"]
